--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900");
-@import url("http://weloveiconfonts.com/api/?family=entypo");
+@import url(../font/icon.css);
 /* entypo */
 [class*="entypo-"]:before {
   font-family: 'entypo', sans-serif;
