--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,8 @@
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
-@import url('http://weloveiconfonts.com/api/?family=entypo');
+@import '../font/icon.css';
+// @import url('http://weloveiconfonts.com/api/?family=entypo');
 
 /* entypo */
 [class*="entypo-"]:before {
