--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900");
 /* entypo */
 [class*="entypo-"]:before {
   font-family: 'entypo', sans-serif;
@@ -9,8 +8,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style-type: none;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
+  font-family: 'neutraText', sans-serif;
 }
 
 body {
@@ -130,7 +128,7 @@ footer {
   align-items: center;
 }
 
-@media screen and (min-width: 800px) {
+@media only screen and (min-width: 800px) {
   header .logo {
     order: 0;
   }
