--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
 
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
+// @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
 // @import "../font/icon.css";
 // @import url('http://weloveiconfonts.com/api/?family=entypo');
 
@@ -27,8 +27,8 @@ $logoDia: 100px;
   padding: 0;
   box-sizing: border-box;
   list-style-type: none;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
+  font-family: 'neutraText', sans-serif;
+  // font-weight: 300;
 }
 
 body {
@@ -156,7 +156,7 @@ footer {
   align-items: center;
 }
 
-@media screen and (min-width: 800px) {
+@media only screen and (min-width: 800px) {
   header {
 
     .logo {
