--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,16 @@ p {
   align-items: center;
 }
 
+.products h2 {
+  display: flex;
+  text-transform: uppercase;
+  padding: 20px;
+  height: 50px;
+  background-color: white;
+  z-index: 99;
+  align-items: center;
+}
+
 .products-list div {
   display: flex;
   width: 250px;
@@ -116,6 +126,13 @@ p {
   border: 1px solid #687c40;
   text-align: center;
   padding: 20px;
+}
+
+hr {
+  width: 100%;
+  position: relative;
+  top: 25px;
+  border: 1px solid #d4d5d6;
 }
 
 footer {
