--- a/css/style.scss
+++ b/css/style.scss
@@ -83,7 +83,6 @@ header {
   }
 }
 
-
 .logo {
   order: 1;
   height: $logoDia;
@@ -116,17 +115,25 @@ article {
   margin-top: 30px;
 }
 
-
 p {
   text-align: center;
   // max-width: 80ch;
 }
 
-
 .products {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  h2 {
+    display: flex;
+    text-transform: uppercase;
+    padding: 20px;
+    height: 50px;
+    background-color: white;
+    z-index: 99;
+    align-items: center;
+  }
 
   &-list {
     // width: 100%;
@@ -145,6 +152,13 @@ p {
       padding: 20px;
     }
   }
+}
+
+hr {
+  width: 100%;
+  position: relative;
+  top: 25px;
+  border: 1px solid lighten($grey, 40);
 }
 
 footer {
