--- a/css/style.css
+++ b/css/style.css
@@ -130,9 +130,10 @@ p {
 
 hr {
   width: 100%;
+  height: 1px;
   position: relative;
   top: 25px;
-  border: 1px solid #d4d5d6;
+  background-color: #d4d5d6;
 }
 
 footer {
