--- a/css/style.scss
+++ b/css/style.scss
@@ -156,9 +156,10 @@ p {
 
 hr {
   width: 100%;
+  height: 1px;
   position: relative;
   top: 25px;
-  border: 1px solid lighten($grey, 40);
+  background-color: lighten($grey, 40);
 }
 
 footer {
