--- a/css/helpers/_variables.scss
+++ b/css/helpers/_variables.scss
@@ -1,7 +1,8 @@
 
 // colors
-$green: #687c40;
+$green: #637d37;
 $lt-green: lighten($green, 40);
+$yellow: #dece25;
 $grey: #6D6E71;
 $lt-grey: lighten($grey, 40);
 $white: white;
