--- a/css/modules/_home.scss
+++ b/css/modules/_home.scss
@@ -13,3 +13,31 @@
     object-fit: cover;
   }
 }
+
+.description {
+  margin: 30px 0;
+  img {
+    max-height: 150px;
+  }
+}
+.intro {
+  display: flex;
+  flex-direction: column;
+  .text h1 {
+    margin-top: 30px;
+  }
+  p {
+    margin-top: 10px;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .intro {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    .text {
+      width: calc(50% - 20px);
+    }
+  }
+}
