--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,54 @@
+header {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50pt;
+  color: white;
+  text-transform: uppercase;
+  font-size: .75rem;
+  font-weight: bold;
+  background-color: #637d37;
+  box-shadow: 0 -1px 10px -5px black;
+  z-index: 999;
+  line-height: normal;
+}
+
+header div, header ul {
+  display: flex;
+}
+
+header div li, header ul li {
+  margin-left: 20px;
+}
+
+.nav {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav div, .nav a {
+  margin: 0 10px;
+}
+
+.nav a {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav a:hover, .nav a:active {
+  color: #d4d5d6;
+}
+
+.nav a span {
+  margin-top: 10px;
+}
+
 .hero {
   width: 100vw;
   margin: 0 -10vw;
@@ -14,6 +65,38 @@
   width: 100%;
   min-height: 100%;
   object-fit: cover;
+}
+
+.description {
+  margin: 30px 0;
+}
+
+.description img {
+  max-height: 150px;
+}
+
+.intro {
+  display: flex;
+  flex-direction: column;
+}
+
+.intro .text h1 {
+  margin-top: 30px;
+}
+
+.intro p {
+  margin-top: 10px;
+}
+
+@media only screen and (min-width: 800px) {
+  .intro {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .intro .text {
+    width: calc(50% - 20px);
+  }
 }
 
 /* entypo icons */
@@ -40,60 +123,13 @@ body {
   background-color: white;
 }
 
-header {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 50pt;
-  color: white;
-  text-transform: uppercase;
-  font-size: .75rem;
-  font-weight: bold;
-  background-color: #687c40;
-  box-shadow: 0 -1px 10px -5px black;
-  z-index: 999;
-  line-height: normal;
-}
-
-header .nav {
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-header .nav div, header .nav a {
-  margin: 0 10px;
-}
-
-header .nav a {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-header .nav a span {
-  margin-top: 10px;
-}
-
-header div, header ul {
-  display: flex;
-}
-
-header div li, header ul li {
-  margin-left: 20px;
-}
-
 .logo {
   display: none;
   height: 75px;
   width: 75px;
   flex-shrink: 0;
   border-radius: 50%;
-  border: 3px solid #687c40;
+  border: 3px solid #637d37;
   align-self: flex-end;
   background-color: white;
 }
@@ -111,53 +147,12 @@ header div li, header ul li {
 }
 
 .icons li:hover {
-  color: #cad7b1;
-}
-
-article {
-  margin-top: 30px;
+  color: #c6d9a8;
 }
 
 p {
   text-align: left;
   max-width: 70ch;
-}
-
-.products {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.products h2 {
-  display: flex;
-  text-transform: uppercase;
-  padding: 20px;
-  height: 50px;
-  background-color: white;
-  z-index: 99;
-  align-items: center;
-}
-
-.products-list div {
-  display: flex;
-  width: 250px;
-  height: 125px;
-  border-radius: 125px 125px 0 0;
-  margin: 20px 0;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #687c40;
-  text-align: center;
-  padding: 20px;
-}
-
-hr {
-  width: 100%;
-  height: 1px;
-  position: relative;
-  top: 25px;
-  background-color: #d4d5d6;
 }
 
 footer {
@@ -169,15 +164,4 @@ footer {
   justify-content: center;
   align-items: center;
   padding-bottom: 50pt;
-}
-
-@media only screen and (min-width: 800px) {
-  header .icons {
-    min-width: 75px;
-  }
-  .products-list {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
 }
