--- a/css/style.scss
+++ b/css/style.scss
@@ -37,48 +37,6 @@ body {
   background-color: $white;
 }
 
-header {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 50pt;
-  color: $white;
-  text-transform: uppercase;
-  font-size: .75rem;
-  font-weight: bold;
-  background-color: $green;
-  box-shadow: 0 -1px 10px -5px $black;
-  z-index: 999;
-  line-height: normal;
-  .nav {
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    div, a {
-      margin: 0 10px;
-    }
-    a {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      justify-content: center;
-      align-items: center;
-      span {
-        margin-top: 10px;
-      }
-    }
-  }
-
-  div, ul {
-    display: flex;
-    li {
-      margin-left: 20px;
-    }
-  }
-}
-
 .logo {
   display: none;
   height: $logoDia;
@@ -103,53 +61,47 @@ header {
   }
 }
 
-
-
-article {
-  margin-top: 30px;
-}
-
 p {
   text-align: left;
   max-width: 70ch;
 }
 
-.products {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  h2 {
-    display: flex;
-    text-transform: uppercase;
-    padding: 20px;
-    height: 50px;
-    background-color: $white;
-    z-index: 99;
-    align-items: center;
-  }
-  &-list {
-    div {
-      display: flex;
-      width: 250px;
-      height: 125px;
-      border-radius: 125px 125px 0 0;
-      margin: 20px 0;
-      align-items: center;
-      justify-content: center;
-      border: 1px solid $green;
-      text-align: center;
-      padding: 20px;
-    }
-  }
-}
-
-hr {
-  width: 100%;
-  height: 1px;
-  position: relative;
-  top: 25px;
-  background-color: $lt-grey;
-}
+// .products {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   h2 {
+//     display: flex;
+//     text-transform: uppercase;
+//     padding: 20px;
+//     height: 50px;
+//     background-color: $white;
+//     z-index: 99;
+//     align-items: center;
+//   }
+//   &-list {
+//     div {
+//       display: flex;
+//       width: 250px;
+//       height: 125px;
+//       border-radius: 125px 125px 0 0;
+//       margin: 20px 0;
+//       align-items: center;
+//       justify-content: center;
+//       border: 1px solid $green;
+//       text-align: center;
+//       padding: 20px;
+//     }
+//   }
+// }
+//
+// hr {
+//   width: 100%;
+//   height: 1px;
+//   position: relative;
+//   top: 25px;
+//   background-color: $lt-grey;
+// }
 
 footer {
   background-color: $grey;
@@ -162,17 +114,5 @@ footer {
 }
 
 @media only screen and (min-width: 800px) {
-  header {
-    .icons {
-      min-width: $logoDia;
-    }
-  }
 
-  .products {
-    &-list {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-    }
-  }
 }
