header media query styling added

--- a/css/helpers/_mixins.scss
+++ b/css/helpers/_mixins.scss
@@ -1,5 +1,12 @@
-
+// main:../style.scss
 @mixin full-page {
   width: 100vw;
   margin: 0 -10vw;
+}
+
+// media query mixins
+@mixin min800 {
+  @media only screen and (min-width: 800px){
+    @content;
+  }
 }
