--- a/css/helpers/_variables.scss
+++ b/css/helpers/_variables.scss
@@ -1,4 +1,4 @@
-
+// main:../style.scss
 // colors
 $green: #637d37;
 $lt-green: lighten($green, 40);
@@ -9,4 +9,4 @@ $white: white;
 $black: black;
 
 // dimensions
-$logoDia: 75px;
+$logoDia: 150px;
