--- a/css/modules/_home.scss
+++ b/css/modules/_home.scss
@@ -1,3 +1,5 @@
+// main:../style.scss
+
 .hero {
   @include full-page;
   max-height: 75vw;
@@ -15,7 +17,7 @@
 }
 
 .description {
-  margin: 30px 0;
+  margin: 30px 0 60px 0;
   img {
     max-height: 150px;
   }
@@ -23,21 +25,21 @@
 .intro {
   display: flex;
   flex-direction: column;
-  .text h1 {
-    margin-top: 30px;
-  }
-  p {
-    margin-top: 10px;
-  }
-}
-
-@media only screen and (min-width: 800px) {
-  .intro {
+  @include min800 {
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
     .text {
       width: calc(50% - 20px);
     }
+  }
+  .text h1 {
+    margin-top: 30px;
+  }
+  p {
+    margin-top: 10px;
+  }
+  p:not(:first-of-type) {
+    margin-top: 1.5rem;
   }
 }
