--- a/css/helpers/_mixins.scss
+++ b/css/helpers/_mixins.scss
@@ -10,3 +10,25 @@
     @content;
   }
 }
+
+// widths
+@mixin width($mw: "", $w: "", $xw: "") {
+  min-width: $mw;
+  width: $w;
+  max-width: $xw;
+}
+// height
+@mixin height($mh: "", $h: "", $xh: "") {
+  min-height: $mh;
+  height: $h;
+  max-height: $xh;
+}
+
+// Positioning
+@mixin pAbsolute ($top: 0, $left: 0, $btm: "", $right: ""){
+  position: absolute;
+  top: $top;
+  left: $left;
+  bottom: $btm;
+  right: $right;
+}
