--- a/css/modules/_products.scss
+++ b/css/modules/_products.scss
@@ -1,1 +1,46 @@
 // main:../style.scss
+
+.products {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+  flex-wrap: wrap;
+  @include min800 {
+    flex-direction: row;
+    height: $altProductHeight;
+    width: 100%;
+    justify-content: space-between;
+    margin-top: $logoDia / 2;
+    margin-bottom: 0;
+    background-color: red;
+  }
+  [class*="svg-"] {
+    margin: 10px;
+    @include width(250px)
+    @include height(250px)
+    background-color: wheat;
+    border-radius: 50%;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    h2 {
+      width: 100%;
+      text-transform: uppercase;
+      background-color: $white;
+      text-align: center;
+      padding: 20px 0;
+      color: $green;
+      font-weight: bold;
+      z-index: 99;
+    }
+    svg {
+      @include pAbsolute();
+      @include width(250px);
+      @include height(250px);
+    }
+  }
+}
