--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ header {
     background-color: inherit;
     color: #637d37;
     font-size: 1rem;
-    box-shadow: none;
     height: 75px;
   }
   header [class*="entypo-"] {
@@ -144,6 +143,123 @@ header div li, header ul li {
   margin-top: 1.5rem;
 }
 
+.products {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+  flex-wrap: wrap;
+}
+
+@media only screen and (min-width: 800px) {
+  .products {
+    flex-direction: row;
+    height: calc(100vh - (150px * 1.5));
+    width: 100%;
+    justify-content: space-between;
+    margin-top: 75px;
+    margin-bottom: 0;
+    background-color: red;
+  }
+}
+
+.products [class*="svg-"] {
+  margin: 10px;
+  min-width: 250px;
+  width: "";
+  max-width: "";
+  min-height: 250px;
+  height: "";
+  max-height: "";
+  background-color: wheat;
+  border-radius: 50%;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.products [class*="svg-"] h2 {
+  width: 100%;
+  text-transform: uppercase;
+  background-color: white;
+  text-align: center;
+  padding: 20px 0;
+  color: #637d37;
+  font-weight: bold;
+  z-index: 99;
+}
+
+.products [class*="svg-"] svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: "";
+  right: "";
+  min-width: 250px;
+  width: "";
+  max-width: "";
+  min-height: 250px;
+  height: "";
+  max-height: "";
+}
+
+.svg-microgreens svg .cls-1,
+.svg-microgreens svg .cls-4 {
+  fill: none;
+}
+
+.svg-microgreens svg .cls-2 {
+  clip-path: url("#clip-path1");
+}
+
+.svg-microgreens svg .cls-3 {
+  fill: #6d6e71;
+}
+
+.svg-microgreens svg .cls-4 {
+  stroke-miterlimit: 10;
+  stroke: url("#linear-gradient1");
+}
+
+.svg-veggy svg .cls-1,
+.svg-veggy svg .cls-4 {
+  fill: none;
+}
+
+.svg-veggy svg .cls-2 {
+  clip-path: url("#clip-path2");
+}
+
+.svg-veggy svg .cls-3 {
+  fill: #6d6e71;
+}
+
+.svg-veggy svg .cls-4 {
+  stroke-miterlimit: 10;
+  stroke: url("#linear-gradient2");
+}
+
+.svg-flowers svg .cls-1,
+.svg-flowers svg .cls-4 {
+  fill: none;
+}
+
+.svg-flowers svg .cls-2 {
+  clip-path: url("#clip-path3");
+}
+
+.svg-flowers svg .cls-3 {
+  fill: #6d6e71;
+}
+
+.svg-flowers svg .cls-4 {
+  stroke-miterlimit: 10;
+  stroke: url("#linear-gradient3");
+}
+
 /* entypo icons */
 [class*="entypo-"]:before {
   font-family: 'entypo', sans-serif;
@@ -166,6 +282,13 @@ body {
   font-size: 16px;
   line-height: 1.5rem;
   background-color: white;
+  margin-bottom: 50pt;
+}
+
+@media only screen and (min-width: 800px) {
+  body {
+    margin-bottom: auto;
+  }
 }
 
 .icons {
@@ -197,5 +320,4 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 50pt;
 }
