--- a/css/style.scss
+++ b/css/style.scss
@@ -11,6 +11,7 @@
 @import 'modules/images';
 @import 'modules/contact';
 @import 'modules/footer';
+@import 'modules/svg-styles';
 
 
 /* entypo icons */
@@ -35,6 +36,10 @@ body {
   font-size: 16px;
   line-height: 1.5rem;
   background-color: $white;
+  margin-bottom: 50pt;
+  @include min800 {
+    margin-bottom: auto;
+  }
 }
 
 .icons {
@@ -94,12 +99,11 @@ p {
 
 footer {
   background-color: $grey;
-  height: 150px;
+  height: $logoDia;
   @include full-page;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 50pt;
 }
 
 @media only screen and (min-width: 800px) {
