--- a/css/modules/_products.scss
+++ b/css/modules/_products.scss
@@ -14,7 +14,7 @@
     justify-content: space-between;
     margin-top: $logoDia / 2;
     margin-bottom: 0;
-    background-color: red;
+    // background-color: red;
   }
   [class*="svg-"] {
     margin: 10px;
@@ -27,6 +27,10 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    @include min800 {
+      @include width($w: calc((80vw - 60px)/3))
+      @include height($h: calc((80vw - 60px)/3))
+    }
     h2 {
       width: 100%;
       text-transform: uppercase;
