--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,6 @@ header div li, header ul li {
     justify-content: space-between;
     margin-top: 75px;
     margin-bottom: 0;
-    background-color: red;
   }
 }
 
@@ -179,6 +178,17 @@ header div li, header ul li {
   align-items: center;
   justify-content: center;
   position: relative;
+}
+
+@media only screen and (min-width: 800px) {
+  .products [class*="svg-"] {
+    min-width: "";
+    width: calc((80vw - 60px)/3);
+    max-width: "";
+    min-height: "";
+    height: calc((80vw - 60px)/3);
+    max-height: "";
+  }
 }
 
 .products [class*="svg-"] h2 {
