--- a/css/helpers/_mixins.scss
+++ b/css/helpers/_mixins.scss
@@ -10,3 +10,8 @@
     @content;
   }
 }
+
+@mixin transition ($a:all) {
+	transition: $a 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change: $a;
+}
