--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -1,41 +1,44 @@
 // main:../style.scss
 header {
+
+  left    : 0;
+  bottom  : 0;
+  width   : 100%;
+  height  : 50pt;
+  z-index : 999;
+  color   : $white;
   position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 50pt;
-  color: $white;
-  text-transform: uppercase;
-  font-size: .75rem;
-  font-weight: bold;
   background-color: $green;
-  box-shadow: 0 -1px 10px -5px $black;
-  z-index: 999;
-  line-height: normal;
+  box-shadow: 0 -1px 10px -5px $black; //refine color
+  font: uppercase bold .75rem/normal 'neutraText', sans-serif;
+
   @include min800 {
-    top: 0;
-    background-color: inherit;
-    color: $green;
-    font-size: 1rem;
-    box-shadow: none;
-    height: $logoDia / 2;
-    [class*="entypo-"] {display: none;}
+    top       : 0;
+    color     : $green ;
+    font-size : 1rem   ;
+    background: initial;
+    box-shadow: initial;
+    height    : $logoDia / 2;
+    [class*="entypo-"] {display: none}
   }
+
   .nav {
+    height : 100%;
     display: flex;
-    height: 100%;
+    align-items    : center;
     justify-content: center;
-    align-items: center;
+
     div, a {
       margin: 0 10px;
     }
+
     a {
+      height : 100%;
       display: flex;
-      flex-direction: column;
-      height: 100%;
+      flex-direction : column;
+      align-items    : center;
       justify-content: center;
-      align-items: center;
+
       @include min800 {
         margin: 0 20px;
       }
@@ -57,13 +60,14 @@ header {
 
 .logo {
   display: none;
-  height: $logoDia;
-  width: $logoDia;
-  flex-shrink: 0;
-  border-radius: 50%;
-  align-self: flex-start;
-  background-color: $white;
   z-index: 999;
+  width  : $logoDia;
+  height : $logoDia;
+  flex-shrink  : 0;
+  border-radius: 50%;
+  align-self   : flex-start;
+  background   : $white;
+
   svg {
     width: 100%;
   }
