--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ header {
     top: 0;
     color: #637d37;
     font-size: 1rem;
-    background: initial;
+    background: white;
     box-shadow: initial;
     height: 75px;
   }
