--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -43,7 +43,7 @@ header {
         margin: 0 20px;
       }
       &:hover, &:active {
-        color: $lt-grey;
+        color: $grey40;
       }
       span {
         margin-top: 10px;
