--- a/css/modules/_home.scss
+++ b/css/modules/_home.scss
@@ -4,7 +4,7 @@
   @include full-page;
   max-height: 75vw;
   height: 500px;
-  background-color: $lt-grey;
+  background-color: $grey40;
   display: flex;
   justify-content: center;
   align-items: center;
