--- a/css/modules/_svg-styles.scss
+++ b/css/modules/_svg-styles.scss
@@ -9,10 +9,10 @@
       fill: none;
     }
     .cls-2 {
-      fill: #6d6e71;
+      fill: $grey;
     }
     .cls-3 {
-      stroke: #6d6e71;
+      stroke: $grey;
       stroke-linecap: round;
       stroke-linejoin: round;
       stroke-width: 0;
@@ -33,10 +33,10 @@
       fill: none;
     }
     .cls-2 {
-      fill: #6d6e71;
+      fill: $grey;
     }
     .cls-3 {
-      stroke: #6d6e71;
+      stroke: $grey;
       stroke-linecap: round;
       stroke-linejoin: round;
       stroke-width: 0;
@@ -57,10 +57,10 @@
       fill: none;
     }
     .cls-2 {
-      fill: #6d6e71;
+      fill: $grey;
     }
     .cls-3 {
-      stroke: #6d6e71;
+      stroke: $grey;
       stroke-linecap: round;
       stroke-linejoin: round;
       stroke-width: 0;
