--- a/css/style.css
+++ b/css/style.css
@@ -231,11 +231,11 @@ header div li, header ul li {
 }
 
 .svg-microgreens svg .cls-2 {
-  fill: #6d6e71;
+  fill: #6D6E71;
 }
 
 .svg-microgreens svg .cls-3 {
-  stroke: #6d6e71;
+  stroke: #6D6E71;
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-width: 0;
@@ -253,11 +253,11 @@ header div li, header ul li {
 }
 
 .svg-veggy svg .cls-2 {
-  fill: #6d6e71;
+  fill: #6D6E71;
 }
 
 .svg-veggy svg .cls-3 {
-  stroke: #6d6e71;
+  stroke: #6D6E71;
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-width: 0;
@@ -275,11 +275,11 @@ header div li, header ul li {
 }
 
 .svg-flowers svg .cls-2 {
-  fill: #6d6e71;
+  fill: #6D6E71;
 }
 
 .svg-flowers svg .cls-3 {
-  stroke: #6d6e71;
+  stroke: #6D6E71;
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-width: 0;
