--- a/css/style.scss
+++ b/css/style.scss
@@ -50,7 +50,7 @@ body {
   li {
     margin-left: 15px;
     &:hover {
-      color: $lt-green;
+      color: $green40;
     }
   }
 }
@@ -94,7 +94,7 @@ p {
 //   height: 1px;
 //   position: relative;
 //   top: 25px;
-//   background-color: $lt-grey;
+//   background-color: $grey40;
 // }
 
 footer {
