--- a/css/helpers/_mixins.scss
+++ b/css/helpers/_mixins.scss
@@ -12,13 +12,13 @@
 }
 
 // widths
-@mixin width($mw: "", $w: "", $xw: "") {
+@mixin width($mw: auto, $w: auto, $xw: auto) {
   min-width: $mw;
   width: $w;
   max-width: $xw;
 }
 // height
-@mixin height($mh: "", $h: "", $xh: "") {
+@mixin height($mh: auto, $h: auto, $xh: auto) {
   min-height: $mh;
   height: $h;
   max-height: $xh;
@@ -36,4 +36,4 @@
 @mixin transition ($a:all) {
 	transition: $a 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   will-change: $a;
-} 
+}
