--- a/css/modules/_products.scss
+++ b/css/modules/_products.scss
@@ -16,39 +16,40 @@
     margin-bottom: 0;
     // background-color: red;
   }
+  .svg-microgreens {
+    background: url("../svg/microgreens.svg");
+  }
+  .svg-flowers {
+    background: url("../svg/flores.svg");
+  }
+  .svg-veggy {
+    background: url("../svg/vegetables.svg");
+  }
   [class*="svg-"] {
     margin: 10px;
     @include width(250px)
     @include height(250px)
-    // background-color: wheat;
     border-radius: 50%;
     flex-shrink: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
+    background-size: cover;
     @include min800 {
       @include width($w: calc((80vw - 60px)/3))
       @include height($h: calc((80vw - 60px)/3))
     }
     h2 {
-      width: 100%;
+      width: calc(100% + 10px);
       text-transform: uppercase;
       background-color: $white;
       text-align: center;
       padding: 20px 0;
+      margin: 0 -5px;
       color: $green;
       font-weight: bold;
       z-index: 99;
-    }
-    svg {
-      @include pAbsolute();
-      @include width(250px);
-      @include height(250px);
-      @include min800 {
-        @include width($w: calc((80vw - 60px)/3))
-        @include height($h: calc((80vw - 60px)/3))
-      }
     }
   }
 }
