--- a/css/modules/_home.scss
+++ b/css/modules/_home.scss
@@ -1,34 +1,39 @@
 // main:../style.scss
 
 .hero {
-  @include full-page;
-  max-height: 75vw;
-  height: 500px;
-  background-color: $grey40;
-  display: flex;
-  justify-content: center;
+  height     : 500px ;
+  display    : flex  ;
+  overflow   : hidden;
+  max-height : 75vw  ;
   align-items: center;
-  overflow: hidden;
+  @include full-page ;
+  justify-content : center ;
+  background-color: $grey40;
+
   img {
-    width: 100%;
-    min-height: 100%;
+    width     : 100% ;
+    min-height: 100% ;
     object-fit: cover;
   }
 }
 
 .description {
   margin: 30px 0 60px 0;
+
   img {
     max-height: 150px;
   }
 }
+
 .intro {
   display: flex;
   flex-direction: column;
+
   @include min800 {
-    flex-direction: row;
-    justify-content: space-between;
     width: 100%;
+    flex-direction : row;
+    justify-content: space-between;
+
     .text {
       width: calc(50% - 20px);
     }
@@ -36,10 +41,9 @@
   .text h1 {
     margin-top: 30px;
   }
+
   p {
     margin-top: 10px;
-  }
-  p:not(:first-of-type) {
-    margin-top: 1.5rem;
+    &:not(:first-of-type){margin-top: 1.5rem}
   }
 }
