--- a/css/style.scss
+++ b/css/style.scss
@@ -15,31 +15,34 @@
 
 
 /* entypo icons */
-[class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif;
-  font-size: 1.5rem;
-}
+[class*="entypo-"]:before { font: 1.5rem 'entypo', sans-serif }
 
 * {
-  margin: 0;
-  padding: 0;
+  margin    : 0;
+  padding   : 0;
+  color     : inherit;
   box-sizing: border-box;
+  text-decoration: none;
   list-style-type: none;
   font-family: 'neutraText', sans-serif;
-  text-decoration: none;
-  color: inherit;
 }
 
 body {
-  width: 80vw;
-  margin: auto;
-  font-size: 16px;
+  width      : 80vw;
+  margin     : auto;
+  font-size  : 16px;
   line-height: 1.5rem;
+  margin-bottom   : 50pt;
   background-color: $white;
-  margin-bottom: 50pt;
+
   @include min800 {
     margin-bottom: auto;
   }
+}
+
+p {
+  text-align: left;
+  max-width: 70ch;
 }
 
 .icons {
@@ -55,10 +58,6 @@ body {
   }
 }
 
-p {
-  text-align: left;
-  max-width: 70ch;
-}
 
 // .products {
 //   display: flex;
@@ -98,14 +97,13 @@ p {
 // }
 
 footer {
-  background-color: $grey;
-  height: $logoDia;
+  height  : $logoDia;
+  display : flex;
   @include full-page;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+  align-items     : center;
+  justify-content : center;
+  background-color: $grey ;
 }
 
-@media only screen and (min-width: 800px) {
-
-}
+@media only screen and (min-width: 800px) {}
