changes on scroll logic and logo animation

--- a/css/helpers/_variables.scss
+++ b/css/helpers/_variables.scss
@@ -3,8 +3,8 @@
 $yellow  : #dece25;
 $green   : #637d37;
 $green40 : lighten($green, 40);
-$grey    : #6D6E71;  // would recommend calling grey800, same with green
-$grey40  : lighten($grey, 40); // would recommend calling grey400
+$grey    : #6D6E71;
+$grey40  : lighten($grey, 40); 
 $black   : black;
 $white   : white;
 
