--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -10,7 +10,7 @@ header {
   position: fixed;
   text-transform  : uppercase;
   background-color: $green;
-  box-shadow: 0 -1px 10px -5px $black; //refine color
+  box-shadow      : 0 -1px 10px -5px $black;
   font: bold .75rem/normal 'neutraText', sans-serif;
 
 
@@ -22,6 +22,7 @@ header {
     box-shadow: initial;
     height    : $logoDia / 2;
     [class*="entypo-"] {display: none}
+    box-shadow: 0 1px 10px -5px $black;
   }
 
   .nav {
@@ -69,11 +70,18 @@ header {
   border-radius: 50%;
   align-self   : flex-start;
   background   : $white;
+  @include transition;
 
-  svg {
-    width: 100%;
-  }
+  svg { width: 100%}
+
   @include min800 {
     display: inherit;
   }
+}
+
+.scroll-logo{
+  transform: translateY(-70px);
+  background: transparent;
+  svg > *{ opacity: 0 }
+  .cls-2 {opacity: 1  }
 }
