--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ header {
     background: white;
     box-shadow: initial;
     height: 75px;
+    box-shadow: 0 1px 10px -5px black;
   }
   header [class*="entypo-"] {
     display: none;
@@ -76,6 +77,8 @@ header div li, header ul li {
   border-radius: 50%;
   align-self: flex-start;
   background: white;
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change: all;
 }
 
 .logo svg {
@@ -86,6 +89,19 @@ header div li, header ul li {
   .logo {
     display: inherit;
   }
+}
+
+.scroll-logo {
+  transform: translateY(-70px);
+  background: transparent;
+}
+
+.scroll-logo svg > * {
+  opacity: 0;
+}
+
+.scroll-logo .cls-2 {
+  opacity: 1;
 }
 
 .hero {
