--- a/css/modules/_products.scss
+++ b/css/modules/_products.scss
@@ -17,13 +17,13 @@
     // background-color: red;
   }
   .svg-microgreens {
-    background: url("../svg/microgreens.svg");
+    background-image: url("../svg/microgreens.svg");
   }
   .svg-flowers {
-    background: url("../svg/flores.svg");
+    background-image: url("../svg/flores.svg");
   }
   .svg-veggy {
-    background: url("../svg/vegetables.svg");
+    background-image: url("../svg/vegetables.svg");
   }
   [class*="svg-"] {
     margin: 10px;
@@ -36,6 +36,9 @@
     justify-content: center;
     position: relative;
     background-size: cover;
+    &:hover, &:active {
+      background-color: $green40;
+    }
     @include min800 {
       @include width($w: calc((80vw - 60px)/3))
       @include height($h: calc((80vw - 60px)/3))
