Add transition amination to hovers and actives

--- a/css/modules/_products.scss
+++ b/css/modules/_products.scss
@@ -39,6 +39,7 @@
     @include width (250px)
     @include height(250px)
     background-size: cover;
+    @include transition(background-color);
     &:hover, &:active {
       background-color: $green40;
     }
