--- a/css/modules/_footer.scss
+++ b/css/modules/_footer.scss
@@ -17,7 +17,8 @@ footer {
     }
     li {
       margin-left: 15px;
-      &:hover {
+      @include transition(color);
+      &:hover, &:active {
         color: $green40;
       }
     }
