--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -41,6 +41,7 @@ header {
       flex-direction : column;
       align-items    : center;
       justify-content: center;
+      @include transition(color);
 
       @include min800 {
         margin: 0 20px;
