--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,8 @@ header .nav a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  transition: color 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change: color;
 }
 
 @media only screen and (min-width: 800px) {
@@ -206,6 +208,8 @@ header div li, header ul li {
   height: auto;
   max-height: auto;
   background-size: cover;
+  transition: background-color 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change: background-color;
 }
 
 .products [class*="svg-"]:hover, .products [class*="svg-"]:active {
@@ -254,9 +258,11 @@ footer .icons ul {
 
 footer .icons li {
   margin-left: 15px;
+  transition: color 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change: color;
 }
 
-footer .icons li:hover {
+footer .icons li:hover, footer .icons li:active {
   color: #c6d9a8;
 }
 
