--- a/css/helpers/_mixins.scss
+++ b/css/helpers/_mixins.scss
@@ -1,7 +1,7 @@
 // main:../style.scss
 @mixin full-page {
-  width: 100vw;
-  margin: 0 -10vw;
+  width:   100vw;
+  margin:  0 -10vw;
 }
 
 // media query mixins
@@ -12,28 +12,33 @@
 }
 
 // widths
-@mixin width($mw: auto, $w: auto, $xw: auto) {
-  min-width: $mw;
-  width: $w;
-  max-width: $xw;
+@mixin width($mw, $w, $xw) {
+  min-width:  $mw;
+  width:      $w;
+  max-width:  $xw;
 }
 // height
 @mixin height($mh: auto, $h: auto, $xh: auto) {
   min-height: $mh;
-  height: $h;
+  height:     $h;
   max-height: $xh;
 }
 
+@mixin size($w, $h){
+  width:     $w;
+  height:    $h;
+}
+
 // Positioning
-@mixin pAbsolute ($top: 0, $left: 0, $btm: "", $right: ""){
+@mixin pAbsolute ($top: 0, $left: 0, $btm: null, $right: null){
   position: absolute;
-  top: $top;
-  left: $left;
-  bottom: $btm;
-  right: $right;
+  top:       $top;
+  left:      $left;
+  bottom:    $btm;
+  right:     $right;
 }
 
 @mixin transition ($a:all) {
-	transition: $a 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-  will-change: $a;
+	transition:   $a 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change:  $a;
 }
