--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -3,8 +3,7 @@ header {
 
   left    : 0;
   bottom  : 0;
-  width   : 100%;
-  height  : 50pt;
+  @include size(100%, 50pt);
   z-index : 999;
   color   : $white;
   position: fixed;
@@ -65,8 +64,7 @@ header {
 .logo {
   display: none;
   z-index: 999;
-  width  : $logoDia;
-  height : $logoDia;
+  @include size ($logoDia, $logoDia);
   flex-shrink  : 0;
   border-radius: 50%;
   align-self   : flex-start;
