--- a/css/style.css
+++ b/css/style.css
@@ -177,8 +177,6 @@ header div li, header ul li {
     height: calc(100vh - (150px * 1.5));
     margin-top: 75px;
     justify-content: space-between;
-    margin-top: 75px;
-    margin-bottom: 0;
   }
 }
 
@@ -201,13 +199,9 @@ header div li, header ul li {
   align-items: center;
   border-radius: 50%;
   justify-content: center;
-  min-width: 250px;
-  width: auto;
-  max-width: auto;
-  min-height: 250px;
-  height: auto;
-  max-height: auto;
   background-size: cover;
+  width: 250px;
+  height: 250px;
   transition: background-color 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   will-change: background-color;
 }
@@ -218,12 +212,8 @@ header div li, header ul li {
 
 @media only screen and (min-width: 800px) {
   .products [class*="svg-"] {
-    min-width: auto;
     width: calc((80vw - 60px)/3);
-    max-width: auto;
-    min-height: auto;
     height: calc((80vw - 60px)/3);
-    max-height: auto;
   }
 }
 
@@ -264,72 +254,6 @@ footer .icons li {
 
 footer .icons li:hover, footer .icons li:active {
   color: #c6d9a8;
-}
-
-.svg-microgreens svg .cls-1,
-.svg-microgreens svg .cls-3,
-.svg-microgreens svg .cls-4 {
-  fill: none;
-}
-
-.svg-microgreens svg .cls-2 {
-  fill: #6D6E71;
-}
-
-.svg-microgreens svg .cls-3 {
-  stroke: #6D6E71;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-width: 0;
-}
-
-.svg-microgreens svg .cls-4 {
-  stroke-miterlimit: 10;
-  stroke: url("#linear-gradient");
-}
-
-.svg-veggy svg .cls-1,
-.svg-veggy svg .cls-3,
-.svg-veggy svg .cls-4 {
-  fill: none;
-}
-
-.svg-veggy svg .cls-2 {
-  fill: #6D6E71;
-}
-
-.svg-veggy svg .cls-3 {
-  stroke: #6D6E71;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-width: 0;
-}
-
-.svg-veggy svg .cls-4 {
-  stroke-miterlimit: 10;
-  stroke: url("#linear-gradient");
-}
-
-.svg-flowers svg .cls-1,
-.svg-flowers svg .cls-3,
-.svg-flowers svg .cls-4 {
-  fill: none;
-}
-
-.svg-flowers svg .cls-2 {
-  fill: #6D6E71;
-}
-
-.svg-flowers svg .cls-3 {
-  stroke: #6D6E71;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-width: 0;
-}
-
-.svg-flowers svg .cls-4 {
-  stroke-miterlimit: 10;
-  stroke: url("#linear-gradient");
 }
 
 /* entypo icons */
