--- a/css/modules/_home.scss
+++ b/css/modules/_home.scss
@@ -18,7 +18,8 @@
 }
 
 .description {
-  margin: 30px 0 60px 0;
+  margin: 30px auto 60px auto;
+  max-width: 980px;
 
   img {
     max-height: 150px;
