--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,38 @@
+/* entypo icons */
+[class*="entypo-"]:before {
+  font: 1.5rem 'entypo', sans-serif;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  color: inherit;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style-type: none;
+  font-family: 'neutraText', sans-serif;
+}
+
+body {
+  width: 80vw;
+  margin: auto;
+  font-size: 16px;
+  line-height: 1.5rem;
+  margin-bottom: 50pt;
+  background-color: white;
+}
+
+@media only screen and (min-width: 800px) {
+  body {
+    margin-bottom: auto;
+  }
+}
+
+p {
+  text-align: left;
+  max-width: 70ch;
+}
+
 header {
   left: 0;
   bottom: 0;
@@ -129,7 +164,8 @@ header div li, header ul li {
 }
 
 .description {
-  margin: 30px 0 60px 0;
+  margin: 30px auto 60px auto;
+  max-width: 980px;
 }
 
 .description img {
@@ -258,39 +294,4 @@ footer .icons li {
 
 footer .icons li:hover, footer .icons li:active {
   color: #c6d9a8;
-}
-
-/* entypo icons */
-[class*="entypo-"]:before {
-  font: 1.5rem 'entypo', sans-serif;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  color: inherit;
-  box-sizing: border-box;
-  text-decoration: none;
-  list-style-type: none;
-  font-family: 'neutraText', sans-serif;
-}
-
-body {
-  width: 80vw;
-  margin: auto;
-  font-size: 16px;
-  line-height: 1.5rem;
-  margin-bottom: 50pt;
-  background-color: white;
-}
-
-@media only screen and (min-width: 800px) {
-  body {
-    margin-bottom: auto;
-  }
-}
-
-p {
-  text-align: left;
-  max-width: 70ch;
 }
