--- a/css/helpers/_variables.scss
+++ b/css/helpers/_variables.scss
@@ -5,7 +5,7 @@ $green   : #637d37;
 $green40 : lighten($green, 40);
 $grey    : #6D6E71;
 $grey40  : lighten($grey, 40);
-$black   : black;
+$black   : darken($green, 30);
 $white   : white;
 
 // dimensions
