--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -46,7 +46,7 @@ header {
       margin: 0 20px;
     }
     &:hover, &:active {
-      color: $grey40;
+      color: $black;
     }
     span {
       margin-top: 10px;
@@ -79,5 +79,5 @@ header {
 }
 
 .on-page {
-  color: $grey40;
+  color: $black;
 }
