--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,7 @@ p {
 @import 'modules/header';
 @import 'modules/home';
 @import 'modules/products';
+@import 'modules/productItem';
 @import 'modules/images';
 @import 'modules/contact';
 @import 'modules/footer';
