--- a/css/modules/_productItem.scss
+++ b/css/modules/_productItem.scss
@@ -31,7 +31,7 @@
 }
 
 .product-item {
-  @include size(100%, 100%);
+  @include size(100%, auto);
   display: flex;
   flex-direction: column;
   justify-content: center;
