--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ header {
 
 .product-item {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
